# berezta

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md
.github/workflows/: release.yml
docs/: guide.md
src/: main.cpp
src/core/: buffer.cpp  buffer.h  codec.cpp  codec.h  command.h  document.cpp  document.h  history.cpp  history.h  json.cpp  json.h  search.cpp  search.h  selection.cpp  selection.h  utf8_util.cpp  utf8_util.h
src/tui/: app.cpp  app.h  help.cpp  help.h  input.cpp  input.h  prompt.cpp  prompt.h  renderer.cpp  renderer.h  status_bar.cpp  status_bar.h  terminal.cpp  terminal.h
tests/: buffer_test.cpp  codec_test.cpp  document_test.cpp  history_test.cpp  json_test.cpp  search_test.cpp  selection_test.cpp  utf8_util_test.cpp
